se modifica nuevo template

--- a/web/themes/custom/julius/css/estilo.css
+++ b/web/themes/custom/julius/css/estilo.css
@@ -1,3 +1,16 @@
 body{
 	background: #ffff;
 }
+.main-header{
+	background: url(../images/banner.png) no-repeat center center;
+	height: 503px;
+}
+.bg-light {
+    background-color: #ffff !important;
+}
+.section2{
+	background-color: #f7f7f7;
+}
+.section3{
+	background-color: #ffff;
+}
