--- a/web/themes/custom/julius/templates/page.html.twig
+++ b/web/themes/custom/julius/templates/page.html.twig
@@ -29,15 +29,8 @@
  *
  * Regions:
  * - page.header: Items for the header region.
- * - page.primary_menu: Items for the primary menu region.
- * - page.secondary_menu: Items for the secondary menu region.
- * - page.highlighted: Items for the highlighted content region.
- * - page.help: Dynamic help text, mostly for admin pages.
  * - page.content: The main content of the current page.
- * - page.sidebar_first: Items for the first sidebar.
- * - page.sidebar_second: Items for the second sidebar.
  * - page.footer: Items for the footer region.
- * - page.breadcrumb: Items for the breadcrumb region.
  *
  * @see template_preprocess_page()
  * @see html.html.twig
@@ -47,44 +40,41 @@
 #}
 <div class="layout-container">
 
-  <header role="banner">
-    {{ page.header }}
-  </header>
-
-  {{ page.primary_menu }}
-  {{ page.secondary_menu }}
-
-  {{ page.breadcrumb }}
-
-  {{ page.highlighted }}
-
-  {{ page.help }}
-
+  <header  role="banner">
+      <div class="container">
+          {{ page.header }} 
+      </div>
+      <div class="main-header">
+      </div> 
+  </header> 
   <main role="main">
-    <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
-
-    <div class="layout-content">
-      {{ page.content }}
+    <div class="container">
+      <div class="row justify-content-center align-items-center minh-100">
+        <div class="col-lg-12 text-center mt-5">
+        {{ page.content }}
+        </div>
+      </div>
     </div>{# /.layout-content #}
+      <div class="section2">
+    <div class="container">
+      <div class="row justify-content-center align-items-center minh-100">
+          <div class="col-lg-12 text-center mt-5">
+          
+          </div>
+      </div>
+    </div>
+  </div>
+  <div class="section3">
+    <div class="container">
+      <div class="row justify-content-center align-items-center minh-100">
+          <div class="col-lg-12 text-center mt-5">
+          
+          </div>
+      </div>
+    </div>
+  </div> 
+  </main> 
 
-    {% if page.sidebar_first %}
-      <aside class="layout-sidebar-first" role="complementary">
-        {{ page.sidebar_first }}
-      </aside>
-    {% endif %}
+</div>{# /.layout-container #} 
 
-    {% if page.sidebar_second %}
-      <aside class="layout-sidebar-second" role="complementary">
-        {{ page.sidebar_second }}
-      </aside>
-    {% endif %}
 
-  </main>
-
-  {% if page.footer %}
-    <footer role="contentinfo">
-      {{ page.footer }}
-    </footer>
-  {% endif %}
-
-</div>{# /.layout-container #}
